[package]
edition = "2021"
name = "gch"
version = "0.1.0"

[features]
basic = ["dep:crossbeam-queue"]
crossbeam = ["dep:crossbeam-channel"]
flume = ["dep:flume"]

default = ["basic", "flume", "crossbeam"]

[dependencies]
crossbeam-channel = {version = "0.5", optional = true}
crossbeam-queue = {version = "0.3", default-features = false, features = ["alloc"], optional = true}
flume = {version = "0.11", default-features = false, optional = true}
